# texgrid_manager

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/textgrid_explorer/: __about__.py  __init__.py  explorer_window.py  main.py  models.py  utils.py
src/textgrid_explorer/dialogs/: __init__.py  filter_view.py  init_wizard.py  preferences_dlg.py  project_dlg.py  replace_dlg.py
src/textgrid_explorer/resources/: icons.qrc  open_file.praat  rc_icons.py
src/textgrid_manager/: __about__.py  __init__.py  dialogs.py  main.py  models.py  utils.py
src/textgrid_manager/dialogs/: __init__.py  filter.py  project_dlg.py
tests/: test_app.py
