[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "textgrid-manager"
dynamic = ["version"]
description = 'A tool to manage TextGrid files with an integrated GUI'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "U.N. Owen", email = "void@some.where" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/U.N. Owen/textgrid-manager#readme"
Issues = "https://github.com/U.N. Owen/textgrid-manager/issues"
Source = "https://github.com/U.N. Owen/textgrid-manager"

[tool.hatch.version]
path = "src/textgrid_manager/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/textgrid_manager tests}"

[tool.coverage.run]
source_pkgs = ["textgrid_manager", "tests"]
branch = true
parallel = true
omit = [
  "src/textgrid_manager/__about__.py",
]

[tool.coverage.paths]
textgrid_manager = ["src/textgrid_manager", "*/textgrid-manager/src/textgrid_manager"]
tests = ["tests", "*/textgrid-manager/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
