[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "textgrid-explorer"
dynamic = ["version"]
description = 'Edit annotations in multiple TextGrid files'
readme = "README.md"
requires-python = ">=3.8"
license = "GPL-3.0-or-later"
keywords = []
authors = [
  { name = "Rolando Muñoz", email = "rolando.muar@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.gui-scripts]
TGExplorer = "textgrid_explorer:main"

[project.urls]
Documentation = "https://github.com/rolandomunoz/textgrid_explorer/blob/main/README.md"
Issues = "https://github.com/rolandomunoz/textgrid_explorer/issues"
Source = "https://github.com/rolandomunoz/textgrid_explorer"

[tool.hatch.version]
path = "src/textgrid_explorer/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/textgrid_explorer tests}"

[tool.coverage.run]
source_pkgs = ["textgrid_explorer", "tests"]
branch = true
parallel = true
omit = [
  "src/textgrid_explorer/__about__.py",
]

[tool.coverage.paths]
textgrid_explorer = ["src/textgrid_explorer", "*/textgrid_explorer/src/textgrid_explorer"]
tests = ["tests", "*/textgrid_explorer/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
